After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710215 - audioiirfilter: Crashes when no coefficients are provided
audioiirfilter: Crashes when no coefficients are provided
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.0.10
Other Linux
: Normal normal
: 1.2.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-15 21:06 UTC by Dirk-Jan C. Binnema
Modified: 2013-10-31 21:45 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Dirk-Jan C. Binnema 2013-10-15 21:06:53 UTC
(segfault in gst-launch pipeline with audioiirfilter)

Playing with gst-launch, I found the following:

  $ gst-launch-1.0 filesrc location=test.mp3 ! decodebin ! audioconvert ! audioiirfilter  ! autoaudiosink

Setting pipeline to PAUSED ...
Pipeline is PREROLLING ...
Caught SIGSEGV accessing address (nil)

Thread 2 (Thread 0x7f4c3ffff700 (LWP 3817))

  • #0 nanosleep
    at ../sysdeps/unix/syscall-template.S line 81
  • #1 g_usleep
    at gtimer.c line 261
  • #2 fault_spin
    at gst-launch.c line 149
  • #3 fault_handler_sigaction
    at gst-launch.c line 129
  • #4 <signal handler called>
  • #5 process
    at audiofxbaseiirfilter.c line 299
  • #6 process_32
    at audiofxbaseiirfilter.c line 350
  • #7 gst_audio_fx_base_iir_filter_transform_ip
    at audiofxbaseiirfilter.c line 381
  • #8 gst_base_transform_handle_buffer
    at gstbasetransform.c line 2064
  • #9 gst_base_transform_chain
    at gstbasetransform.c line 2176
  • #10 gst_pad_chain_data_unchecked
    at gstpad.c line 3655
  • #11 gst_pad_push_data
    at gstpad.c line 3872
  • #12 gst_pad_push
    at gstpad.c line 3975
  • #13 gst_base_transform_chain
    at gstbasetransform.c line 2212
  • #14 gst_pad_chain_data_unchecked
    at gstpad.c line 3655
  • #15 gst_pad_push_data
    at gstpad.c line 3872
  • #16 gst_pad_push
    at gstpad.c line 3975
  • #17 gst_proxy_pad_chain_default
    at gstghostpad.c line 128
  • #18 gst_pad_chain_data_unchecked
    at gstpad.c line 3655
  • #19 gst_pad_push_data
    at gstpad.c line 3872
  • #20 gst_pad_push
    at gstpad.c line 3975
  • #21 gst_audio_decoder_push_forward
    at gstaudiodecoder.c line 827
  • #22 gst_audio_decoder_output
    at gstaudiodecoder.c line 903
  • #23 gst_audio_decoder_finish_frame
    at gstaudiodecoder.c line 1126
  • #24 gst_mad_handle_frame
    at gstmad.c line 478
  • #25 gst_audio_decoder_push_buffers
    at gstaudiodecoder.c line 1271
  • #26 gst_audio_decoder_chain_forward
    at gstaudiodecoder.c line 1374
  • #27 gst_audio_decoder_chain
    at gstaudiodecoder.c line 1635
  • #28 gst_pad_chain_data_unchecked
    at gstpad.c line 3655
  • #29 gst_pad_push_data
    at gstpad.c line 3872
  • #30 gst_pad_push
    at gstpad.c line 3975
  • #31 gst_base_parse_push_frame
    at gstbaseparse.c line 2146
  • #32 gst_base_parse_handle_and_push_frame
    at gstbaseparse.c line 1968
  • #33 gst_base_parse_finish_frame
    at gstbaseparse.c line 2272
  • #34 gst_mpeg_audio_parse_handle_frame
    at gstmpegaudioparse.c line 768
  • #35 gst_base_parse_handle_buffer
    at gstbaseparse.c line 1828
  • #36 gst_base_parse_scan_frame
    at gstbaseparse.c line 2901
  • #37 gst_base_parse_loop
    at gstbaseparse.c line 2970
  • #38 gst_task_func
    at gsttask.c line 316
  • #39 g_thread_pool_thread_proxy
    at gthreadpool.c line 309
  • #40 g_thread_proxy
    at gthread.c line 798
  • #41 start_thread
    at pthread_create.c line 308
  • #42 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 113

I'm using gstreamer v1.0.10 on Fedora 19.
Comment 1 Sebastian Dröge (slomo) 2013-10-31 21:45:07 UTC
commit 2559557ff1a12ff97dd1619e8d004d35d9266511
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Thu Oct 31 22:43:49 2013 +0100

    audioiirfilter: Don't crash if no filter coefficients are provided
    
    ...and by default use a identity filter.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=710215