gst/audiofx/audiofxbaseiirfilter.c
@@ -372,7 +372,11 @@ gst_audio_fx_base_iir_filter_transform_ip (GstBaseTransform * base,
   if (GST_CLOCK_TIME_IS_VALID (stream_time))
     gst_object_sync_values (GST_OBJECT (filter), stream_time);
 
-  g_return_val_if_fail (filter->a != NULL, GST_FLOW_ERROR);
+  if (filter->a == NULL || filter->b == NULL) {
+    g_return_val_if_fail (filter->a != NULL
+        && filter->b != NULL, GST_FLOW_ERROR);
+    return GST_FLOW_ERROR;
+  }
 
   gst_buffer_map (buf, &map, GST_MAP_READWRITE);
   num_samples = map.size / GST_AUDIO_FILTER_BPS (filter);
